Add files for local jekyll server

--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,8 @@ news:
     width: 192
   display-max: 8 # this is the number of news shown on the front page
   
+gems:
+- jekyll
+
+plugins:
+- jekyll-seo-tag
