--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 author: Guillaume Garrigos
 title: Guillaume Garrigos
 description: Associate Professor in Applied Mathematics
-url: "http://www.guillaume-garrigos.com/"
+url: "https://guillaume-garrigos.github.io/"
 picture: "/assets/images/me_lab.jpg"
 
 # Colors for the website
