--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
     - name: Compile LaTeX document
       uses: dante-ev/latex-action@master
       with:
-        root_file: /curriculum/cv.tex
-        working_directory: /curriculum
+        root_file: cv.tex
+        working_directory: curriculum/
