--- a/.github/workflows/compile_latex_curriculum.yml
+++ b/.github/workflows/compile_latex_curriculum.yml
@@ -1,20 +1,23 @@
 name: Github Actions CI
-on: push
+on:
+  push:
+    branches:
+      - master
 jobs:
   build:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     steps:
     - name: Set up Git repository
       uses: actions/checkout@v1
-    - name: Compile LaTeX document
+    - name: Compile Slides
       uses: xu-cheng/latex-action@master
       with:
-        root_file: curriculum/cv.tex
-    - name: Check pdf file
+        root_file: cv.tex
+        working_directory: curriculum
+    - name: Check pdf files
       run: |
         file curriculum/cv.pdf | grep -q ' PDF '
-    - name: Upload curriculum/cv.pdf
+    - name: Upload
       run: |
         set -e
         # configure git
@@ -26,12 +29,11 @@ jobs:
         echo "$DEPLOY_KEY" > ~/.ssh/id_ed25519
         chmod 600 ~/.ssh/id_ed25519
         git config --global core.sshCommand "ssh -i ~/.ssh/id_ed25519 -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
-        git clone --depth=1 git@github.com:Guillaume-Garrigos/website.git "$GITHUB_WORKSPACE/website"
-        cp -f curriculum/cv.pdf "$GITHUB_WORKSPACE/website/file/cv.pdf"
-        cd "$GITHUB_WORKSPACE/website"
-        git add file/cv.pdf
-        git diff --exit-code HEAD -- file/cv.pdf && exit 0
-        git commit -m "[github actions] update cv"
+        git clone --depth=1 --branch gh-pages git@github.com:xu-cheng/latex-tutorial.git "$GITHUB_WORKSPACE/deploy"
+        cp -f curriculum/cv.pdf "$GITHUB_WORKSPACE/deploy/cv.pdf"
+        cd "$GITHUB_WORKSPACE/deploy"
+        git add cv.pdf
+        git commit -m "[github actions] deploy"
         git push
       env:
-        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
