--- a/.github/workflows/compile_latex_curriculum.yml
+++ b/.github/workflows/compile_latex_curriculum.yml
@@ -1,3 +1,4 @@
+# https://github.com/habi/latex-test/blob/master/README.md
 name: Github Actions CI
 on:
   push:
@@ -9,7 +10,7 @@ jobs:
     steps:
     - name: Set up Git repository
       uses: actions/checkout@v1
-    - name: Compile Slides
+    - name: Compile Latex
       uses: xu-cheng/latex-action@master
       with:
         root_file: cv.tex
