--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/git,ruby,latex,jekyll,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=git,ruby,latex,jekyll,visualstudiocode
 
+# archive perso
+/_archive/*
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
