--- a/_data/perso.yml
+++ b/_data/perso.yml
@@ -2,5 +2,5 @@
 
 email: garrigos[that symbol]lpsm.paris
 address:
-  name: "Bureau 5014 <br/> LPSM, Batiment Sophie Germain <br/> Université Paris Diderot <br/> 75205 Paris CEDEX 13"
+  name: "Bureau 5014 <br/> LPSM, Batiment Sophie Germain <br/> Université Paris Cité <br/> 75205 Paris CEDEX 13"
   url: "https://goo.gl/maps/ALqLH2oSYQA2"
