--- a/_tests/papers.yml
+++ b/_tests/papers.yml
@@ -18,7 +18,7 @@ authors:
 papers:
   - date: 2024-04-02
     title: Analysis of an Idealized Stochastic Polyak Method and its Application to Black-Box Model Distillation
-    authors: 
+    author-list: 
       - Gower
       - Garrigos
       - Loizou
@@ -30,4 +30,14 @@ papers:
     link-editor:
     link-slides: 2025-SPS
 
-# todo : run a python script which 1) converts this into a csv 2) creates the name-html value for authors 3) creates the author-list and author-html-list fields for the papers 4) in the reverse order
+  - date: 2023-07-26
+    title: 'Function Value Learning: Adaptive Learning Rates Based on the Polyak Stepsize and Function Splitting in ERM'
+    author-list: 
+      - Garrigos
+      - Gower
+      - Schaipp
+    status:
+    ref : 
+    arxiv: '2307.14528'
+    link-editor:
+    link-slides: 
