--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Git repository
+    - name: Set up Git repository # needed for acessing files from the repo
       uses: actions/checkout@master
     - name: Install python
       uses: actions/setup-python@v2
