--- a/.github/workflows/papers.yml
+++ b/.github/workflows/papers.yml
@@ -45,6 +45,8 @@ jobs:
     steps:
     - name: Set up Git repository
       uses: actions/checkout@master
+      with:
+        ref: master
     - name: Compile Latex Document
       uses: Guillaume-Garrigos/latex-action@master
       with:
